Bug 370629: Large images rescale to nothing (integer overflow computing replaced element size). r=dbaron, sr=roc.